src/components/snapshots/toppers__components__disk__tests__disk_no_data.snap
---
source: src/components/disk.rs
expression: terminal.backend()
---
"┌ [I]DISK ───────────────────────────────────────────────────────────┐"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"└────────────────────────────────────────────────────────────────────┘"
