src/components/snapshots/toppers__components__disk__tests__disk_with_data.snap
---
source: src/components/disk.rs
expression: terminal.backend()
---
"┌ [I]DISK ───────────────────────────────────────────────────────────┐"
"│sda          r:       0 B/s  w:  102.4 KB/s   45.0%                 │"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"└────────────────────────────────────────────────────────────────────┘"
